2003-02-17  Oliver Kiddle  <opk@zsh.org>

	* 18249: Completion/Linux/Command/_uml: new completion function
	for User Mode Linux

	* Doug Kearns: 18246: Completion/Unix/Command/_elinks,
	Completion/Unix/Command/_ant, Completion/Unix/Command/_java:
	minor update to _elinks and a couple of trivial fixes for java/ant

	* 18242: Src/builtin.c, Completion/Zsh/Command/_read,
	Doc/Zsh/builtins.yo: add -d option to read for specifying
	delimiter to terminate input instead of newline

2003-02-14  Peter Stephenson  <pws@csr.com>

	* 18243: Src/Zle/zle_main.c: On Solaris, poll the tty for
	typeahead before selecting.

	* modified from 18236: zshconfig.ac, Etc/MACHINES: Attempt to fix
	HP-UX problem with curses, which apparently failed; however, it is
	documented in MACHINES.

2003-02-13  Oliver Kiddle  <opk@zsh.org>

	* 18238: Config/installfns.sh, Src/Zle/complete.mdd:
	bashcompinit was not being installed with --enable-function-subdirs

	* users/5915: Completion/Unix/Command/_ssh: two levels of quoting
	are needed for remote files referenced with scp

	* 18237: Completion/Zsh/Command/_read: complete -t option

	* 18223: Src/builtin.c, Doc/Zsh/builtins.yo: satisfy POSIX
	requirement for a -v flag to unset

2003-02-13  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/Unix/Command/_perforce: same again,
	but do it properly.  Fix _perforce_revisions with named file.

2003-02-11  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/Unix/Command/_p4: Oliver thinks _perforce
	is a better name than _p4.

2003-02-08  Clint Adams  <clint@zsh.org>

	* 18207: Src/Builtins/rlimits.c: add maxfilelocks to ulimit output.

2003-02-07  Peter Stephenson  <pws@csr.com>

	* 18204: Doc/Zsh/builtins.yo, Src/builtin.c: KSH_ARRAYS gives
	ksh behaviour with set -A <optargs> <args>.

2003-02-06  Peter Stephenson  <pws@csr.com>

	* 18202: Functions/TCP/*, Doc/Makefile.in, Doc/zsh.yo,
	Doc/zshtcpsys.yo, Doc/Zsh/manual.yo, Doc/Zsh/modules.yo,